@@ -9,6 +9,7 @@ import (
 	"crypto/sha512"
 	"encoding/hex"
 	"net/http"
+	"time"
 
 	"github.com/shuLhan/share/lib/errors"
 )
@@ -166,6 +167,14 @@ const (
 
 // DefaultLimit define maximum number of record fetched per request.
 const DefaultLimit = 1000
+
+// DefaultDialTimeout define maximum time waiting for connection to be
+// fully accepted.
+var DefaultDialTimeout = 10 * time.Second
+
+// DefaultTimeout define maximum time waiting for response in each HTTP
+// or WebSocket request.
+var DefaultTimeout = 16 * time.Second
 
 // List of valid sort.
 const (
